# general-tree-search

./: .gitignore  LICENSE  Output_27431065.out  README.md  pyproject.toml  pyproject.toml.old  test.py
examples/: bfmm.py  compare_evaluation_functions.py  connect_four_match.py  ggp_match.py  gridworld_bfs.py  iterative_deepening.py  mcts.py  minimax.py  random_game.py  raylib.py
experiments/: agents.py  elo_search.py  expensive.py  experiment_agent_search.py  experiment_pairwise.py  games.py  new_process.py  pairwise.py  process_pairwise.py  process_results.py  run_experiment.py  sanity_check.py  search.py  submit.sh  submit_search.sh  test.py
src/general_tree_search/: __init__.py  search_tree.py  tree_search.py
src/general_tree_search/components/: choose.py  control.py  evaluate.py  extract_solution.py  generic.py  update.py
src/general_tree_search/games/: __init__.py  base.py  connectfour.py  dummy.py  gridworld.py
src/gts/: __init__.py  run_2048_experiment.py  run_experiment.py  tree.py
src/gts.egg-info/: PKG-INFO  SOURCES.txt
src/gts/agents/: __init__.py  maximizer_agents.py  mcts_agents.py  minimax_agents.py  random_agents.py  treesearch_agent.py  wrappers.py
src/gts/agents/components/: __init__.py  _select.py  (+7 more)
src/gts/components/: __init__.py  _select.py  action_value.py  backpropagate.py  control.py  evaluate.py  expand.py  frontier.py  generic.py  get_best_move.py  trim.py
src/gts/games/: __init__.py  dummy.py  nim.py  twenty48.py
src/gts/ggp/: compiler  compiler.nim  test.py
tests/: examples.py  test_agents.py  test_games.py  test_tree.py
(+6 files in other folders)
