[tool.poetry]
name = "gts"
version = "0.1.0"
description = "Description"
authors = ["AntonJorg <anton2410@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.66.1"
requests = "^2.31.0"
py4j = "^0.10.9.7"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
pdoc = "^14"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
