[project]
name = "general-tree-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "AntonJorg", email = "anton2410@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.20.3",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "py4j>=0.10.9.9",
    "pygraphviz>=1.14",
    "pyqt5>=5.15.11",
]

[project.scripts]
general-tree-search = "general_tree_search:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
